external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_match_tuple.exp
error[E04005]: expected a single type
  ┌─ tests/move_2024/matching/invalid_match_tuple.move:6:16
  │
3 │     fun x(): (u64, u64) { (0, 42) }
  │              ---------- Expected a single type, but found expression list type: '(u64, u64)'
  ·
6 │         match (x()) {
  │                ^^^ Invalid 'match' subject

error[E04036]: non-exhaustive pattern
  ┌─ tests/move_2024/matching/invalid_match_tuple.move:6:16
  │
6 │         match (x()) {
  │                ^^^ Pattern '_' not covered

error[E01002]: unexpected token
  ┌─ tests/move_2024/matching/invalid_match_tuple.move:7:15
  │
7 │             (x, y) => ()
  │               ^
  │               │
  │               Unexpected ','
  │               Expected ')'

error[E01002]: unexpected token
  ┌─ tests/move_2024/matching/invalid_match_tuple.move:7:18
  │
7 │             (x, y) => ()
  │                  ^
  │                  │
  │                  Unexpected ')'
  │                  Expected '=>'

error[E04005]: expected a single type
   ┌─ tests/move_2024/matching/invalid_match_tuple.move:12:16
   │
 3 │     fun x(): (u64, u64) { (0, 42) }
   │              ---------- Expected a single type, but found expression list type: '(u64, u64)'
   ·
12 │         match (x()) {
   │                ^^^ Invalid 'match' subject

